<resources>
    <string name="app_name">Healix</string>
    <string name="title_home">Home</string>
    <string name="title_payment">Payment</string>
    <string name="title_graph">Graph</string>
    <string name="title_report">Analytics</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_discover">Discover</string>
    <string name="title_profile">Library</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_new_cart">New Cart</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="salutation">Good Morning</string>
    <string name="total_amount">Total amount paid</string>
    <string name="total">170,000</string>
    <string name="currency">Ksh</string>
    <string name="date">16</string>
    <string name="month">June</string>
    <string name="day">Friday</string>
    <string name="time">09:35 AM</string>
    <string name="ins_company">ICEA LION</string>
    <string name="invoice_desc">Insurance : Sanlam</string>
    <string name="invoice_no">#INV839402304</string>
    <string name="service_no">#S738290</string>
    <string name="service_desc">Glucose tolerance test</string>
    <string name="payment_msg">Confirmed payment on #INV1234567 of Ksh 25,000</string>
    <string name="transaction">Recent Transactions</string>
    <string name="previous">Previous</string>
    <string name="details">Details</string>
    <string name="card">Card Details</string>
    <string name="kmpdc">KMPDC No:</string>
    <string name="speciality">Speciality:</string>
    <string name="kra">KRA Pin:</string>
    <string name="date_joined">Date Joined:</string>
    <string name="kmpdc_desc">#km74637892098</string>
    <string name="speciality_desc">Critical Care Medicine</string>
    <string name="kra_desc">#A7589302093N</string>
    <string name="bank_name">Equity Bank</string>
    <string name="bank_number">0110837388237</string>
    <string name="date_joined_desc">14, June 2023</string>
    <string name="hospital">Hospital</string>
    <string name="hospital_desc">Nairobi Hospital</string>
    <string name="claim">Claim No.</string>
    <string name="claim_desc">#M893232893</string>
    <string name="patient_type">Patient Type</string>
    <string name="patient_type_desc">In Patient</string>
    <string name="authorization">Pre-authorization No.</string>
    <string name="authorization_desc">#G9843273263</string>
    <string name="status">Status</string>
    <string name="status_desc">Approved</string>
    <string name="insurance">Insurance</string>
    <string name="insurance_desc">Sanlam</string>
    <string name="datetime">12:34 AM 09 Jun 23</string>
    <string name="services">Services</string>
    <string name="payments">Payments</string>
    <string name="select_ins">Select Insurance Company</string>
    <string name="history">Payment History</string>
    <string name="invoices">Invoices</string>

    <array name="patienttype">
        <item>Select patient type</item>
        <item>patient A</item>
        <item>patient B</item>
    </array>

    <array name="gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </array>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="month_picker">Month Picker</string>
</resources>
