<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LibraryDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kmpdc"
                android:textColor="@color/light_grey"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kmpdc_desc"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:textSize="17sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speciality"
                android:textColor="@color/light_grey"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speciality_desc"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:textSize="17sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kra"
                android:textColor="@color/light_grey"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kra_desc"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:textSize="17sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_joined"
                android:textColor="@color/light_grey"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_joined_desc"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:textColor="@color/black"
                android:textSize="17sp"/>

        </RelativeLayout>


    </LinearLayout>

</FrameLayout>