<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="10dp">

    <ImageView
        android:id="@+id/notificationIcon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/icea"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invoice_no"
        android:textColor="@color/black"
        android:id="@+id/notificationTitle"
        android:textStyle="bold"
        android:layout_marginStart="55dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invoice_desc"
        android:textColor="@color/light_grey"
        android:id="@+id/notificationDescription"
        android:layout_marginStart="55dp"
        android:layout_marginTop="22dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/notificationTime"
        android:textColor="@color/light_grey"
        android:layout_marginStart="55dp"
        android:layout_marginTop="45dp"
        android:textSize="9dp"/>


</RelativeLayout>