<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    app:cardElevation="8dp"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/date"
                android:id="@+id/transactionDate"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="24dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="@string/day"
                android:id="@+id/transactionDay"
                android:textColor="@color/blue"
                android:textSize="12dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:text="@string/month"
                android:id="@+id/transactionMonth"
                android:textColor="@color/blue"
                android:textSize="12dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="95dp"
                android:text="@string/currency"
                android:textColor="@color/blue"
                android:textSize="12dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:text="@string/total"
                android:id="@+id/transactionAmount"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="20dp"
                android:layout_marginTop="15dp"/>
        </RelativeLayout>

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@color/blue"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/transaction_nested_recycler"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>