<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    android:layout_marginStart="20dp"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/date"
                android:id="@+id/notificationDate"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="24sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:id="@+id/notificationDay"
                android:textColor="@color/blue"
                android:layout_marginStart="5dp"
                android:textSize="12sp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:id="@+id/notificationMonth"
                android:layout_marginStart="2dp"
                android:textColor="@color/blue"
                android:textSize="12sp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <View
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@color/blue"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notification_nested_recycler"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>